--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "core-js": "^3.1.2",
+    "firebase": "^7.2.1",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
