--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "cordova-plugin-androidx": "^1.0.2",
+    "cordova-plugin-androidx-adapter": "^1.1.0",
+    "cordova-plugin-firebase-lib": "^5.1.1",
     "core-js": "^3.1.2",
     "firebase": "^7.2.1",
     "roboto-fontface": "*",
